--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,8 @@
 {
-  "name": "hubwiz/ethtool",
-  "description": "ethereum dapp development tools",
+  "name": "summerpassion/ethtool",
+  "description": "development tools",
   "type": "library",
   "license": "MIT",
-  "authors": [
-    {
-      "name": "hubwiz",
-      "email": "support@hubwiz.com"
-    }
-  ],
   "minimum-stability": "dev",
   "require": {
     "php": ">=7.1",
